# doday

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .smtp.err  .tmp_ssh_inspect.py  .uvicorn.err  .uvicorn.pid  DEPLOY.md  Dockerfile  LICENSE  PRELAUNCH.md  PROGRESS.md  READ-FIRST.md  README.md  RESPONSIVE-SPRINT.md  ROADMAP.md  TODO.md  claude.md  design.md  docker-compose.yml  fly.toml  pyproject.toml  simplified-spec.md  todosites.md
.github/workflows/: ci.yml  deploy.yml
.playwright-mcp/: page-2026-05-09T07-13-30-373Z.yml  page-2026-05-09T07-14-36-148Z.yml  page-2026-05-09T07-16-30-943Z.yml  page-2026-05-09T07-17-04-405Z.yml  page-2026-05-09T07-18-46-909Z.yml  page-2026-05-09T07-19-43-304Z.yml  page-2026-05-09T07-20-07-821Z.yml  page-2026-05-09T07-22-58-176Z.yml  page-2026-05-09T07-23-18-080Z.yml  page-2026-05-09T08-03-10-961Z.yml  page-2026-05-09T08-03-39-910Z.yml  page-2026-05-09T08-04-02-236Z.yml  page-2026-05-09T08-04-10-519Z.yml  page-2026-05-09T08-04-27-818Z.yml  page-2026-05-09T08-04-52-195Z.yml  page-2026-05-09T08-05-17-959Z.yml  page-2026-05-09T08-05-46-495Z.yml  page-2026-05-09T08-06-18-301Z.yml  page-2026-05-09T08-08-40-523Z.yml  page-2026-05-09T08-08-59-809Z.yml  page-2026-05-09T08-09-22-731Z.yml  page-2026-05-09T08-10-53-641Z.yml  page-2026-05-09T08-11-38-250Z.yml  page-2026-05-09T08-11-51-933Z.yml  page-2026-05-09T08-12-15-738Z.yml  page-2026-05-09T08-13-26-955Z.yml  page-2026-05-09T08-13-51-105Z.yml  page-2026-05-09T08-31-24-379Z.yml  page-2026-05-09T09-03-30-346Z.yml  page-2026-05-09T10-04-21-299Z.yml  page-2026-05-09T10-08-01-231Z.yml  page-2026-05-09T10-09-34-343Z.yml  page-2026-05-09T10-09-55-110Z.yml  page-2026-05-09T10-11-26-305Z.yml  page-2026-05-09T10-12-00-836Z.yml  page-2026-05-09T13-45-19-018Z.yml  page-2026-05-09T13-46-43-056Z.yml  page-2026-05-09T16-04-55-700Z.yml  page-2026-05-09T16-05-03-487Z.yml  page-2026-05-09T16-05-17-733Z.yml  (+44 more)
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_projects_tasks_labels.py  0003_add_sections.py  0004_add_recurrence.py  0005_project_favorite_description.py  0006_create_comments.py  0007_create_custom_filters.py  0008_create_user_templates.py  0009_user_tier_trial.py  0010_perf_indexes.py  0011_user_audience.py  0012_school_integrations.py  0013_schedule_slots.py  0014_user_ical_token.py  0015_habits.py  0016_task_pinned_at.py  0017_task_deleted_at.py  0018_time_entries.py  0019_mood_entries.py  0020_task_links.py  0021_user_morning_digest.py  0022_admin_and_complaints.py  0023_telegram_links.py  0024_user_progress.py  0025_user_achievements.py  0026_pomodoro_sessions.py  0027_reminders.py  0028_drop_lazy_modules.py  0029_drop_orphan_tables.py  0030_team_collab.py  0031_school_student_id.py  0032_user_experiments.py  0033_revive_task_links.py  0034_revive_habits.py  0035_revive_mood.py  0036_revive_time_entries.py  0037_revive_progress_achievements.py  0038_revive_user_templates.py  0039_telegram_stars_payments.py  0040_lessio_module.py  (+9 more)
app/: config.py  db.py  logging_setup.py  main.py  taptower_proxy.py
app/achievements/: __init__.py  router.py  service.py
app/admin/: __init__.py  models.py  router.py  schemas.py  service.py
app/auth/: deps.py  email.py  models.py  rate_limit.py  router.py  schemas.py  security.py  service.py
app/backup/: router.py  service.py
app/billing/: __init__.py  models.py  products.py  router.py  service.py  stars.py
app/calendar_feed/: __init__.py  router.py  service.py
app/comments/: models.py  router.py  schemas.py  service.py
app/company/: __init__.py  router.py  service.py
app/custom_filters/: models.py  router.py  schemas.py  service.py
app/digest/: __init__.py  router.py  service.py
app/experiments/: presets.py  service.py
app/filters/: service.py
app/gamification/: __init__.py  achievements.py  daily.py  models.py  service.py
app/habits/: __init__.py  models.py  router.py  schemas.py  service.py
app/help/: articles.py  router.py
app/hub/: __init__.py  router.py
app/labels/: models.py  router.py  schemas.py  service.py
app/lessio/: __init__.py  admin.py  cabinet_router.py  cron.py  csv_export.py  email.py  google_calendar.py  ical_export.py  indexnow.py  models.py  og_image.py  reviews.py  router.py  seo_pages.py  service.py  telegram_handlers.py  web_router.py
app/links/: __init__.py  models.py  router.py  schemas.py  service.py
app/miniapp/: __init__.py  auth.py  router.py  static.py
app/mood/: __init__.py  models.py  router.py  service.py
app/pages/: changelog_data.py  roadmap_data.py  router.py
app/pdd/: __init__.py  models.py  router.py  schemas.py  seed_cli.py  seed_load.py  seo.py  service.py
app/pomodoro/: __init__.py  models.py  service.py
deploy/: doday-bot.service  doday.service  nginx.conf
docs/: CONTRIBUTING.md  YOUR-LAUNCH-PLAN.md  feature-gaps-2026-05-05.md  ideas-2026-05-04.md  lessio-launch-posts.md  lessio-production-launch.md  pdd-dataset-schema.md  ralph-loop-prompt.md  tg-channel-drafts.md  ux-audit-2026-05-23.md
scripts/: __init__.py  build_marketing_html.py  deploy-fly.ps1  lessio_seed_demo.py  lint_templates.py  load_test.py  pdd_import_avm.py  refactor_doday_prefix.py  smoke_test.py  start.sh
tests/: conftest.py  test_achievements.py  test_activity_feed.py  test_admin.py  test_app_shell.py  test_assign_hotkey.py  test_assign_member_menu.py  test_assigned.py  test_assignee_filter.py  test_audience.py  test_audience_switch.py  test_auth_polish.py  test_backup.py  test_billing.py  test_billing_entitlements.py  test_bulk.py  test_bulk_actions.py  test_bulk_assign_user.py  test_bulk_create.py  test_bulk_section.py  test_calendar_density.py  test_calendar_feed.py  test_collapse_sections.py  test_comment_badge_hubs.py  test_comment_counts.py  test_comments.py  test_completed_today.py  test_copy_selected.py  test_countdown_pins.py  test_csv_export.py  test_custom_filters.py  test_daily_note.py  test_desc_preview.py  test_digest.py  test_done_view.py  test_drag_between_sections.py  test_due_filter.py  test_due_state.py  test_duplicate_project.py  test_empty_states.py  (+154 more)
(+391 files in other folders)
