[project]
name = "schooltodo"
version = "0.1.0"
description = "Todo list for Russian schoolchildren based on electronic school diaries"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "argon2-cffi>=23.1,<24",
    "jinja2>=3.1,<4",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.19,<1",
    "aiosmtplib>=3.0,<4",
    "httpx>=0.28,<1",
    "email-validator>=2.2,<3",
    "structlog>=24.4,<25",
    "python-telegram-bot>=21.10,<22",
    "sentry-sdk[fastapi]>=2.18,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "A", "RUF"]
ignore = [
    "E501",  # line-length handled by formatter; URLs in tests can exceed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # asserts are the whole point of pytest
    "S105",  # "hardcoded password" — fake passwords in tests are intentional
    "S106",
    "RUF001",  # tests contain Russian strings/URLs by design
    "RUF002",  # тоже для docstrings
    "RUF003",  # тоже для comments
]
"alembic/versions/**" = [
    "E", "F", "I", "UP", "RUF001", "RUF002",  # autogenerated; Cyrillic in docstrings OK
]
"app/quickadd/parser.py" = ["RUF001"]  # intentional Cyrillic in date keywords
"app/views/router.py" = ["RUF001"]  # intentional Cyrillic in month / weekday names
"app/filters/service.py" = ["RUF001"]  # intentional Cyrillic in filter labels
"app/stats/service.py" = ["RUF001"]  # intentional Cyrillic in weekday labels
"app/projects/templates_data.py" = ["RUF001"]  # intentional Cyrillic in template content
"app/help/articles.py" = ["RUF001"]  # help articles authored in Russian
"app/school/service.py" = ["RUF001", "RUF002", "RUF003"]  # intentional Cyrillic in error messages + comments
"app/school/schemas.py" = ["RUF001"]            # intentional Cyrillic in provider labels
"app/school/__init__.py" = ["RUF002"]           # intentional Cyrillic in module docstring
"app/school/subjects.py" = ["RUF001"]           # intentional Cyrillic in subject + weekday names
"app/auth/service.py" = ["RUF001"]              # intentional Cyrillic in starter task copy
"app/achievements/service.py" = ["RUF001"]      # intentional Cyrillic in achievement titles
"app/auth/router.py" = ["RUF001"]               # intentional Cyrillic in user-facing error messages
"app/auth/email.py" = ["RUF001"]                # intentional Cyrillic in branded HTML email body
"app/profile/router.py" = ["RUF001"]            # intentional Cyrillic in user-facing error messages
"app/links/service.py" = ["RUF001"]             # intentional Cyrillic in user-facing error messages
"app/digest/service.py" = ["RUF001", "RUF002"]  # intentional Cyrillic in email body and docstring
"app/digest/__init__.py" = ["RUF002"]            # intentional Cyrillic in module docstring
"app/main.py" = ["RUF002"]                       # intentional Cyrillic in middleware docstrings
"app/config.py" = ["RUF003"]                     # intentional Cyrillic in env-var comments
"app/telegram/bot.py" = ["RUF001", "RUF002", "RUF003"]  # intentional Cyrillic in bot reply text
"app/telegram/__init__.py" = ["RUF002"]
"app/telegram/service.py" = ["RUF002"]
"app/telegram/models.py" = ["RUF002"]
"app/pages/changelog_data.py" = ["RUF001", "RUF002"]  # intentional Cyrillic in changelog entries
"app/pages/roadmap_data.py" = ["RUF001", "RUF002"]    # intentional Cyrillic in roadmap items
"scripts/load_test.py" = ["RUF001", "RUF002"]         # Russian docstring + comments
"app/miniapp/__init__.py" = ["RUF002"]                # intentional Cyrillic in module docstring
"app/miniapp/auth.py" = ["RUF001", "RUF002", "RUF003"]   # intentional Cyrillic in docstrings/comments
"app/miniapp/router.py" = ["RUF001", "RUF002", "RUF003"] # intentional Cyrillic in docstrings/comments
"app/miniapp/static.py" = ["RUF001", "RUF002", "RUF003"] # JS-bundle с русскими комментами

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/versions/",  # autogenerated, often has weak types
    "\\.venv",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
