[project]
name = "schooltodo"
version = "0.1.0"
description = "Todo list for Russian schoolchildren based on electronic school diaries"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "argon2-cffi>=23.1,<24",
    "jinja2>=3.1,<4",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.19,<1",
    "aiosmtplib>=3.0,<4",
    "httpx>=0.28,<1",
    "email-validator>=2.2,<3",
    "structlog>=24.4,<25",
    "python-telegram-bot>=21.10,<22",
    "sentry-sdk[fastapi]>=2.18,<3",
    # tzdata bundled — Windows нет system /usr/share/zoneinfo; нужно для
    # pythonsoftware zoneinfo. Linux/Mac берёт системные, но pip-install harmless.
    "tzdata>=2024.2",
    # Fernet symmetric encryption — для шифрования Google refresh-token в БД (Lessio)
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
    "markdown>=3.10.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "A", "RUF"]
ignore = [
    "E501",  # line-length handled by formatter; URLs in tests can exceed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # asserts are the whole point of pytest
    "S105",  # "hardcoded password" — fake passwords in tests are intentional
    "S106",
    "RUF001",  # tests contain Russian strings/URLs by design
    "RUF002",  # тоже для docstrings
    "RUF003",  # тоже для comments
]
"alembic/versions/**" = [
    "E", "F", "I", "UP", "RUF001", "RUF002",  # autogenerated; Cyrillic in docstrings OK
]
"app/quickadd/parser.py" = ["RUF001"]  # intentional Cyrillic in date keywords
"app/views/router.py" = ["RUF001"]  # intentional Cyrillic in month / weekday names
"app/filters/service.py" = ["RUF001"]  # intentional Cyrillic in filter labels
"app/stats/service.py" = ["RUF001"]  # intentional Cyrillic in weekday labels
"app/projects/templates_data.py" = ["RUF001"]  # intentional Cyrillic in template content
"app/help/articles.py" = ["RUF001"]  # help articles authored in Russian
"app/school/service.py" = ["RUF001", "RUF002", "RUF003"]  # intentional Cyrillic in error messages + comments
"app/school/schemas.py" = ["RUF001"]            # intentional Cyrillic in provider labels
"app/school/__init__.py" = ["RUF002"]           # intentional Cyrillic in module docstring
"app/school/subjects.py" = ["RUF001"]           # intentional Cyrillic in subject + weekday names
"app/auth/service.py" = ["RUF001"]              # intentional Cyrillic in starter task copy
"app/achievements/service.py" = ["RUF001"]      # intentional Cyrillic in achievement titles
"app/auth/router.py" = ["RUF001"]               # intentional Cyrillic in user-facing error messages
"app/auth/email.py" = ["RUF001"]                # intentional Cyrillic in branded HTML email body
"app/profile/router.py" = ["RUF001", "RUF002", "RUF003"]  # intentional Cyrillic in user-facing error messages + comments
# app/links/service.py is set just below with RUF001+RUF002 (revived 2026-05-23)
"app/digest/service.py" = ["RUF001", "RUF002"]  # intentional Cyrillic in email body and docstring
"app/digest/__init__.py" = ["RUF002"]            # intentional Cyrillic in module docstring
"app/experiments/service.py" = ["RUF001", "RUF002"]  # intentional Greek α / Cyrillic in user-facing UI copy
"app/experiments/presets.py" = ["RUF001", "RUF002"]  # preset titles/descriptions are Cyrillic user copy
"app/billing/products.py" = ["RUF001", "RUF002"]     # product titles/descriptions Cyrillic
"app/billing/stars.py" = ["RUF001", "RUF002"]        # error messages Cyrillic
"app/calendar_feed/service.py" = ["RUF001", "RUF002"]  # restored module — intentional Cyrillic in error/UI strings
"app/calendar_feed/router.py" = ["RUF001"]       # restored module — intentional Cyrillic in error messages
"app/links/service.py" = ["RUF001", "RUF002"]    # restored module — intentional Cyrillic in errors/docstrings
"app/links/router.py" = ["RUF001"]               # restored module — intentional Cyrillic in error messages
"app/main.py" = ["RUF001", "RUF002"]             # intentional Cyrillic in CSRF message + docstrings
"app/config.py" = ["RUF003"]                     # intentional Cyrillic in env-var comments
"app/telegram/bot.py" = ["RUF001", "RUF002", "RUF003"]  # intentional Cyrillic in bot reply text
"app/telegram/__init__.py" = ["RUF002"]
"app/telegram/service.py" = ["RUF002"]
"app/telegram/models.py" = ["RUF002"]
"app/pages/changelog_data.py" = ["RUF001", "RUF002"]  # intentional Cyrillic in changelog entries
"app/pages/roadmap_data.py" = ["RUF001", "RUF002"]    # intentional Cyrillic in roadmap items
"scripts/load_test.py" = ["RUF001", "RUF002"]         # Russian docstring + comments
"scripts/build_marketing_html.py" = ["RUF001", "RUF002"]  # Cyrillic in HTML template strings
"app/miniapp/__init__.py" = ["RUF002"]                # intentional Cyrillic in module docstring
"app/miniapp/auth.py" = ["RUF001", "RUF002", "RUF003"]   # intentional Cyrillic in docstrings/comments
"app/miniapp/router.py" = ["RUF001", "RUF002", "RUF003"] # intentional Cyrillic in docstrings/comments
"app/miniapp/static.py" = ["RUF001", "RUF002", "RUF003"] # JS-bundle с русскими комментами
"app/gamification/achievements.py" = ["RUF001", "RUF002", "RUF003"]  # Russian docs+comments
"app/gamification/service.py" = ["RUF001", "RUF002", "RUF003"]
"app/gamification/daily.py" = ["RUF001", "RUF002", "RUF003"]
"app/gamification/__init__.py" = ["RUF002"]
"app/gamification/models.py" = ["RUF002"]
"alembic/versions/0024_user_progress.py" = ["RUF001", "RUF002", "RUF003"]
"alembic/versions/0025_user_achievements.py" = ["RUF001", "RUF002", "RUF003"]
"app/pomodoro/__init__.py" = ["RUF002"]
"app/pomodoro/models.py" = ["RUF002"]
"app/pomodoro/service.py" = ["RUF001", "RUF002", "RUF003"]
"alembic/versions/0026_pomodoro_sessions.py" = ["RUF001", "RUF002", "RUF003"]
"alembic/versions/0027_reminders.py" = ["RUF001", "RUF002", "RUF003"]
"app/reminders/__init__.py" = ["RUF002"]
"app/reminders/models.py" = ["RUF002"]
"app/reminders/service.py" = ["RUF001", "RUF002", "RUF003"]
"app/hub/__init__.py" = ["RUF001", "RUF002"]                     # Russian in module docstring
"app/lessio/__init__.py" = ["RUF002"]                            # Russian in module docstring
"app/lessio/admin.py" = ["RUF001", "RUF002"]                     # Russian in admin error/comment strings
"app/lessio/models.py" = ["RUF001", "RUF002", "RUF003"]          # Russian in column docstrings + comments
"app/lessio/router.py" = ["RUF001", "RUF002", "RUF003"]          # Russian in user-facing error/success messages + comments
"app/lessio/service.py" = ["RUF001", "RUF002", "RUF003"]         # Russian in docstrings/comments/error messages
"app/lessio/web_router.py" = ["RUF001", "RUF002", "RUF003"]      # Russian in user-facing error messages + comments
"app/lessio/email.py" = ["RUF001", "RUF002", "RUF003"]           # Russian in subject/body + docstrings
"app/lessio/cron.py" = ["RUF001", "RUF002", "RUF003"]            # Russian in docstrings + log messages
"app/lessio/cabinet_router.py" = ["RUF001", "RUF002", "RUF003"]  # Russian in docstrings + user-facing strings
"app/lessio/og_image.py" = ["RUF001", "RUF002", "RUF003"]        # Russian niche labels + docstrings
"app/lessio/csv_export.py" = ["RUF001", "RUF002", "RUF003"]      # Russian docstrings
"app/lessio/indexnow.py" = ["RUF001", "RUF002", "RUF003"]        # Russian docstrings + log messages
"app/lessio/reviews.py" = ["RUF001", "RUF002", "RUF003"]         # Russian docstrings + error messages
"app/lessio/google_calendar.py" = ["RUF001", "RUF002", "RUF003"] # Russian docstrings
"alembic/versions/0044_lessio_daily_digest_timestamp.py" = ["RUF001", "RUF002", "RUF003"]
"alembic/versions/0043_lessio_reviews.py" = ["RUF001", "RUF002", "RUF003"]
"alembic/versions/0041_lessio_telegram_only_users.py" = ["RUF001", "RUF002", "RUF003"]  # Russian in migration docstring
"alembic/versions/0042_lessio_web_expansion.py" = ["RUF001", "RUF002", "RUF003"]  # Russian in migration docstring/comments
"app/lessio/telegram_handlers.py" = ["RUF001", "RUF002", "RUF003"]  # Russian welcome message + comments

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/versions/",  # autogenerated, often has weak types
    "\\.venv",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
